--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -2751,19 +2751,34 @@ QScrollBar::handle:horizontal{
                </layout>
               </widget>
               <widget class="QWidget" name="my_own_recipe">
-               <widget class="QLabel" name="check_label">
-                <property name="geometry">
-                 <rect>
-                  <x>50</x>
-                  <y>20</y>
-                  <width>71</width>
-                  <height>16</height>
-                 </rect>
-                </property>
-                <property name="text">
-                 <string>나만의레시피</string>
-                </property>
-               </widget>
+               <layout class="QVBoxLayout" name="verticalLayout_11" stretch="1,9">
+                <item>
+                 <widget class="QLabel" name="check_label">
+                  <property name="text">
+                   <string>📖나만의레시피</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QFrame" name="frame">
+                  <property name="frameShape">
+                   <enum>QFrame::Shape::StyledPanel</enum>
+                  </property>
+                  <property name="frameShadow">
+                   <enum>QFrame::Shadow::Raised</enum>
+                  </property>
+                  <layout class="QGridLayout" name="gridLayout_9" rowstretch="0" columnstretch="0">
+                   <item row="0" column="0">
+                    <widget class="QPushButton" name="open_favoirte_recipe_group_modal_btn">
+                     <property name="text">
+                      <string>+</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+               </layout>
               </widget>
              </widget>
             </item>
