--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -2767,11 +2767,18 @@ QScrollBar::handle:horizontal{
                   <property name="frameShadow">
                    <enum>QFrame::Shadow::Raised</enum>
                   </property>
-                  <layout class="QGridLayout" name="gridLayout_9" rowstretch="0" columnstretch="0">
+                  <layout class="QGridLayout" name="gridLayout_9" rowstretch="0" columnstretch="0,0">
                    <item row="0" column="0">
                     <widget class="QPushButton" name="open_favoirte_recipe_group_modal_btn">
                      <property name="text">
                       <string>+</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="0" column="1">
+                    <widget class="QPushButton" name="pushButton">
+                     <property name="text">
+                      <string>좋아요한 레시피</string>
                      </property>
                     </widget>
                    </item>
