--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -1634,7 +1634,7 @@ color: rgb(255, 255, 255, 255);</string>
                        </font>
                       </property>
                       <property name="text">
-                       <string>나만의 레시피 모음집</string>
+                       <string>좋아요한 레시피</string>
                       </property>
                       <property name="alignment">
                        <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -2751,38 +2751,42 @@ QScrollBar::handle:horizontal{
                </layout>
               </widget>
               <widget class="QWidget" name="my_own_recipe">
-               <layout class="QVBoxLayout" name="verticalLayout_11" stretch="1,9">
+               <layout class="QVBoxLayout" name="verticalLayout_11" stretch="1,0">
                 <item>
                  <widget class="QLabel" name="check_label">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
                   <property name="text">
-                   <string>📖나만의레시피</string>
+                   <string>📖좋아요한 레시피</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QFrame" name="frame">
-                  <property name="frameShape">
-                   <enum>QFrame::Shape::StyledPanel</enum>
+                 <widget class="QScrollArea" name="scrollArea">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
                   </property>
-                  <property name="frameShadow">
-                   <enum>QFrame::Shadow::Raised</enum>
+                  <property name="widgetResizable">
+                   <bool>true</bool>
                   </property>
-                  <layout class="QGridLayout" name="gridLayout_9" rowstretch="0" columnstretch="0,0">
-                   <item row="0" column="0">
-                    <widget class="QPushButton" name="open_favoirte_recipe_group_modal_btn">
-                     <property name="text">
-                      <string>+</string>
-                     </property>
-                    </widget>
-                   </item>
-                   <item row="0" column="1">
-                    <widget class="QPushButton" name="pushButton">
-                     <property name="text">
-                      <string>좋아요한 레시피</string>
-                     </property>
-                    </widget>
-                   </item>
-                  </layout>
+                  <widget class="QWidget" name="scrollAreaWidgetContents_6">
+                   <property name="geometry">
+                    <rect>
+                     <x>0</x>
+                     <y>0</y>
+                     <width>509</width>
+                     <height>512</height>
+                    </rect>
+                   </property>
+                   <layout class="QGridLayout" name="gridLayout_9"/>
+                  </widget>
                  </widget>
                 </item>
                </layout>
