--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -1530,7 +1530,7 @@ color: rgb(255, 255, 255, 255);</string>
                      </size>
                     </property>
                     <property name="text">
-                     <string>추천피드 설정</string>
+                     <string>검색</string>
                     </property>
                    </widget>
                   </item>
